update subscription
